manifests/changedetection/change-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: change-detection
  labels:
    app: change-detection
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: change-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: change-pod
    spec:
      containers:
        - name: change
          image: ghcr.io/dgtlmoon/changedetection.io:0.48.01
          ports:
            - containerPort: 5000
              name: http-change
          resources:
            limits:
              memory: 300Mi
              cpu: 200m
          volumeMounts:
            - mountPath: /datastore
              name: change-volume
      volumes:
        - name: change-volume
          persistentVolumeClaim:
            claimName: change-pvc
